# avy-goto-gaze

./: .clang-format  CMakeLists.txt  README.md
src/: avy-goto-gaze.el  main.cxx  overlay.cxx  use_gaze.h  use_gaze_mod.cxx
